2003-08-10  Mark Kettenis  <kettenis@gnu.org>

	From Peter Schauer (Peter.Schauer@regent.e-technik.tu-muenchen.de):
	* config/i386/nm-i386sol2.h
	(TARGET_REGION_SIZE_OK_FOR_HW_WATCHPOINT): Define to one.

2003-08-09  Andrew Cagney  <cagney@redhat.com>

	Fix GDB PR cli/926.
	* cli/cli-decode.c (add_setshow_uinteger_cmd): New function.
	* command.h (add_setshow_uinteger_cmd): Declare.
	* frame.c (set_backtrace_cmd): New function.
	(show_backtrace_cmd): New function.
	* frame.c (_initialize_frame): Replace "set/show
	backtrace-below-main" with "set/show backtrace past-main".  Add
	command "set/show backtrace limit".
	(backtrace_past_main): Rename "backtrace_below_main".
	(backtrace_limit): New variable.
	(get_prev_frame): Update.  Check the backtrace_limit.

2003-08-09  Andrew Cagney  <cagney@redhat.com>

	* MAINTAINERS (language support): List Adam Fedor as Objective C
	maintainer.

2003-08-08  J. Brobecker  <brobecker@gnat.com>

	* NEWS (Multi-arched targets): Document that all hppa-hpux targets
	are now multiarched.

2003-08-08  Andrew Cagney  <cagney@redhat.com>

	* interps.c (interp_set): Check for a NULL "old_interp".

2003-08-08  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.in (FLAGS_TO_PASS): Add DESTDIR.
	(install-only): Support DESTDIR.
	(uninstall): Likewise.
	(install-gdbtk): Likewise.

2003-08-08  Elena Zannoni  <ezannoni@redhat.com>

	* symtab.c (lookup_symbol_aux): Make sure that is_a_field_of_this
	contains something meaningful at all times.

2003-08-07  Andrew Cagney  <cagney@redhat.com>

	* interps.h (INTERP_MI2, INTERP_MI3): Define.

2003-08-07  Michal Ludvig  <mludvig@suse.cz>

	* x86-64-tdep.c (x86_64_dwarf_regmap): Correct register numbers.
	(x86_64_push_arguments): Skip the red zone.
		
2003-08-04  Daniel Jacobowitz  <drow@mvista.com>

	* Makefile.in (tui-interp.o): Update dependencies.

2003-08-04  David Carlton  <carlton@kealia.com>

	* charset.c (cached_iconv_convert): Add __FILE__ and __LINE__ args
	to internal_error call.
