@@ -1,5 +1,13 @@
 2003-08-10  Mark Kettenis  <kettenis@gnu.org>
 
+	* sol-thread.c (sol_thread_store_registers): Use regcache_collect
+	and supply_register instead of manipulating the register buffer
+	directly.
+
+	From Peter Schauer (Peter.Schauer@regent.e-technik.tu-muenchen.de):
+
+2003-08-10  Mark Kettenis  <kettenis@gnu.org>
+
 	From Peter Schauer (Peter.Schauer@regent.e-technik.tu-muenchen.de):
 	* config/i386/nm-i386sol2.h
 	(TARGET_REGION_SIZE_OK_FOR_HW_WATCHPOINT): Define to one.
